--- a/style/style.css
+++ b/style/style.css
@@ -69,9 +69,6 @@ a:hover {
 .sectionTwo {
     width: 100%;
     height: 450px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
 
 
@@ -81,6 +78,14 @@ a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.sectionTwo h1 {
+    margin-left: 40vh;
+}
+
+.main {
+    width: 100%;
 }
 
 .main div {
