--- a/style/style.css
+++ b/style/style.css
@@ -1,8 +1,11 @@
 
-header div {
-    width: 60px;
-    height: 50px;
+body {
+    background: linear-gradient(to right, darkgray, lightgray);
+}
 
+header div {
+    width: 40px;
+    height: 30px;
 }
 
 header {
@@ -42,10 +45,12 @@ a:hover {
 
 .banner {
     width: 100%;
-    height: 660px;
+    height: 560px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 2px solid gray;
+
 
 }
 
@@ -69,6 +74,8 @@ a:hover {
 .sectionTwo {
     width: 100%;
     height: 450px;
+    border: 2px solid gray;
+
 }
 
 
@@ -97,7 +104,6 @@ a:hover {
 .one {
     width: 570px;
     height: 225px;
-    border: 1px solid black;
     display: flex;
 }
 
