--- a/style/style.css
+++ b/style/style.css
@@ -106,6 +106,7 @@ a:hover {
     width: 570px;
     height: 225px;
     display: flex;
+    flex-direction: row;
 }
 
 .imgfordiv {
@@ -228,6 +229,18 @@ section {
     }
     .something {
         width: 100%;
+
+    }
+    .one {
+        flex-direction: column;
+        margin: 60px 15px 60px 15px;
+    }
+    .info p {
+        margin-top: 5px;
+        width: 400px;
+        height: 400px;
+        text-align: center;
+        margin-left: 50px;
     }
     .image {
         display: none;
